# Merlin

./: .env.example  .gitignore  ARCHITECTURE.md  MANIFEST.in  README.md  Roadmap.md  errors.py  main.py  merlin.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_failures.txt  test_results.txt
brain/: core.py  escalation_policy.py  ordinal_resolver.py  structural_classifier.py
config/: app_capabilities.yaml  browser.yaml  browser.yaml.example  email.yaml  email.yaml.example  execution.yaml  models.yaml  routing.yaml  skills.yaml  telegram.yaml.example  whatsapp.yaml
conversation/: __init__.py  frame.py  outcome.py
cortex/: cognitive_coordinator.py  context_provider.py  entity_resolver.py  fallback.py  filtered_world_state_provider.py  intent_engine.py  json_extraction.py  mission_cortex.py  mission_schema.py  normalizer.py  parameter_resolver.py  preference_resolver.py  scored_discovery.py  semantic_types.py  skill_discovery.py  synonyms.py  validators.py  world_state_provider.py
docs/: analysis-report.md  email-analysis-report.md  overview.md  releasing.md
execution/: cognitive_context.py  executor.py  metacognition.py  registry.py  scheduler.py  skill_context.py  supervisor.py
infrastructure/: app_capabilities.py  app_discovery.py  application_registry.py  browser_controller.py  browser_safety.py  browser_use_adapter.py  browser_use_controller.py  location_config.py  observer.py  search_input_resolver.py  session.py  system_controller.py  voice_factory.py
interface/: __init__.py  api_server.py  bridge.py  config_schema.py  ipc.py  log_buffer.py  telegram_bot.py
ir/: __init__.py  mission.py
memory/: __init__.py  store.py  user_knowledge.py
merlin_assistant/: __init__.py  cli.py  config_discovery.py  (+1 more)
(+249 files in other folders)
